<resources>
    <string name="app_name">Jain Saraswati</string>
    <string name="this_is_book_title">This is Book Title</string>
    <string name="this_is_music_title">This is Music Title</string>
    <string name="get_started">GET STARTED</string>
    <string name="search">Search</string>
    <string name="low_network_connection">LOW NETWORK CONNECTION</string>
    <string name="Sud">Sud</string>
    <string name="Vad">Vad</string>
    <string name="select_city">Select City</string>
    <string name="chaitra">Chaitra</string>
    <string name="vaisakh">Vaisakh</string>
    <string name="jeth">Jeth</string>
    <string name="aashad">Ashadha</string>
    <string name="shravan">Shraavana</string>
    <string name="Bhadra">Bhadaravo</string>
    <string name="Aaso">Aaso</string>
    <string name="kartik">Kartik</string>
    <string name="magasr">Magshar</string>
    <string name="posh">Posh</string>
    <string name="maha">Mahaa</string>
    <string name="fagun">Faagun</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="month">Month</string>
    <string name="special_events">Special Events</string>
    <string name="city_name">Type your City name</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="gujarati">ગુજરાતી</string>
    <string name="timings">Timings</string>
    <string name="chogadiya">Chogadiya</string>
    <string name="book_title">Books</string>
    <string name="music_title">Stavans</string>
    <string name="pachkan_title">Pachkan</string>
    <string name="shubh">Shubh</string>
    <string name="labh">Labh</string>
    <string name="amrit">Amrut</string>
    <string name="chal">Chal</string>
    <string name="rog">Rog</string>
    <string name="kaal">Kaal</string>
    <string name="udveg">Udveg</string>
    <string name="downloading">Downloading :</string>
    <string name="download_complete">Download Completed </string>
    <string name="download_failed">Download Failed </string>
    <string name="alreadyrunning">Another Download Already Running </string>
    <string name="music_channel_id">music</string>
    <string name="navkarshi">Navkarshi</string>
    <string name="porshi">Porshi</string>
    <string name="sadh_porshi">Sadh Porshi</string>
    <string name="avadh">Purimadh-Avadh</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="chauvihar">Chauvihar</string>
    <string name="nakshatras">Nakshatras</string>
    <string name="ashwini">Ashwini</string>
    <string name="bhairani">Bharani</string>
    <string name="kritika">Krittika</string>
    <string name="rohini">Rohini</string>
    <string name="mrigashirsha">Mrugashirsha</string>
    <string name="punarvasu">Punarvasu</string>
    <string name="pushya">Pushya</string>
    <string name="ashlesha">Ashlesha</string>
    <string name="magha">Magha</string>
    <string name="purva_falguni">Purva Falguni</string>
    <string name="uttara_falguni">Uttara Falguni</string>
    <string name="hasta">Hasta</string>
    <string name="chitra">Chitra</string>
    <string name="swati">Swati</string>
    <string name="vishakha">Vishakha</string>
    <string name="anuradha">Anuradha</string>
    <string name="jyeshtha">Jyeshtha</string>
    <string name="mula">Mula</string>
    <string name="purva_ashadha">Purva Ashadha</string>
    <string name="uttara_ashadha">Uttara Ashadha</string>
    <string name="shravana">Shravana</string>
    <string name="dhanishtha">Dhanishtha</string>
    <string name="shatabhisha">Shatabhisha</string>
    <string name="purva_bhadrapada">Purva Bhadrapada</string>
    <string name="uttara_bhadrapada">Uttara Bhadrapada</string>
    <string name="revati">Revati</string>
    <string name="panchang">Panchang</string>
    <string name="ardra">Aardra</string>
    <string name="sun">Sun</string>
    <string name="venus">Venus</string>
    <string name="mercury">Mercury</string>
    <string name="moon">Moon</string>
    <string name="saturn">Saturn</string>
    <string name="jupiter">Jupiter</string>
    <string name="mars">Mars</string>
    <string name="hora">Hora</string>
    <string name="hindi">हिंदी</string>
    <string name="today_s_tithi">TODAY\'S TITHI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Settings</string>
    <string name="select_all_fields">SELECT ALL FIELDS</string>
    <string name="enter_your_suggestion">Enter your Suggestion</string>
    <string name="send">Send</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="suggestion_sent">Suggestion Sent</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="storage_busy">Storage Busy</string>
    <string name="need_more_let_us_know">Need more ?, Let Us Know</string>
    <string name="share">Share</string>
    <string name="to_avoid_buffering_of_audio_during_pratikaman_keep_pratikaman_audios_downloaded_beforehand_and_play_audio_using_local_media_player_such_as_music_mx_player_etc">To Avoid Buffering Of Audio During Pratikaman , Keep Pratikaman Audios Downloaded beforehand , and play audio using Local Media Player , such as Music , MX Player , etc</string>
    <string name="new_pratikaman_s_audio_available_thanks_to_mithil_vikki_rathod">NEW: Pratikaman\'s Audio Available (Thanks to Mithil Vikki Rathod)</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
