<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widgetlayoutid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/widgetdateid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        tools:text="Date"


        />

    <TextView
        android:id="@+id/widgetsudvadid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/widgettithiid"
        android:layout_centerHorizontal="true"
        tools:text="@string/Sud"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/widgettithiid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:text="@string/today_s_tithi"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/widgetmonthid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgettithiid"
        android:layout_centerHorizontal="true"
        tools:text="@string/month"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold|italic" />



</RelativeLayout>