<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    android:background="@android:color/holo_orange_dark"
    >


    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:id="@+id/sudvadid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textAlignment="center"
                    android:textStyle="bold"

                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:id="@+id/tithiid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="50sp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tithimonthid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold"

                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:contentPadding="5dp"
            app:cardUseCompatPadding="true"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    />
                <TextView
                    android:id="@+id/sunriseid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    />
                <TextView
                    android:id="@+id/sunsetid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            app:cardCornerRadius="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nakshatras"
                    />
                <TextView
                    android:id="@+id/nakshatraid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/nakshatraendtimeid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_orange_dark"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/selecteddateid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:background="@color/colorAccent"
                />

            <CalendarView
                android:id="@+id/panchangcalendarviewid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Medium"
                android:dateTextAppearance="@style/TextAppearance.AppCompat.Medium"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



    </LinearLayout>

</ScrollView>